plugins {
    id "java"
}

configure([tasks.compileJava]) {
    sourceCompatibility = 16

    options.compilerArgs = [
            "--release", "8",
            '--enable-preview',
    ]

    doFirst {
        options.compilerArgs = options.compilerArgs.findAll {
            it != '--enable-preview'
        }
    }
}

compileTestJava {
    sourceCompatibility = targetCompatibility = 8
}

test {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

dependencies {
    annotationProcessor project(":jabel-javac-plugin")

    testImplementation 'junit:junit:4.12'
}
